Fixed extra space between toolbar Default icon and menu item.

--- a/styles/layout/horizontal_toolbar.scss
+++ b/styles/layout/horizontal_toolbar.scss
@@ -236,11 +236,6 @@
         width: 24px;
         mask-size: 28px 28px;
       }
-
-      // Default
-      &.toolbar-icon-default {
-        margin-right: var(--gin-spacing-xs);
-      }
     }
   }
 
